# JogoSemestre2

./: .gitignore  CMakeLists.txt  README.md  Segredos revelados.txt  Versions.md
innerIncludes/: Cores.c  Interpreter.c  Suporte.c  gameCore.c  nossaLivraria.c  sprites.c
innerIncludes/headers/: Cores.h  Interpreter.h  Suporte.h  gameCore.h  nossaLivraria.h  sprites.h  yamlReader.h
outIncludes/: algif.c  bitmap.c  gif.c  lzw.c
src/: hm  main.c  main.h
src/assets/characters/: personagens
src/assets/fonts/: Courier-New.tga
src/assets/mapas/: mapa1.txt  mapa1.yaml  mapa2.txt  mapa2.yaml  mapa3.txt  mapa3.yaml
src/supportFiles/: Cores.c  gameCore.c  nossaLivraria.c  sprites.c
